--- a/templates/index/getData.html.twig
+++ b/templates/index/getData.html.twig
@@ -14,12 +14,12 @@
                 <td>{{ manager.name }}</td>
                 <td>{{ manager.surname }}</td>
                 <td>{{ manager.branch.name }}</td>
-                <td><a href="{{ path('edit_manager',{id: manager.id}) }}"> Изменить </a></td>
+                <td><a href="{{ path('edit_manager',{id: manager.id}) }}">Изменить</a></td>
             </tr>
         {% endfor %}
     </table>
     <h1>Отделы</h1>
-    <table>
+    <table class="table table-dark">
         <tr>
             <th>Номер</th>
             <th>Наименование отдела</th>
@@ -27,12 +27,14 @@
         {% for branch in branches %}
             <tr>
                 <td>{{ branch.id }}</td>
-                <td><a href="{{ path('edit_branch', {id: branch.id}) }}">{{ branch.name }}</a></td>
+                <td>{{ branch.name }}</td>
+                <td><a class="text-warning" href="{{ path('edit_branch', {id: branch.id}) }}">Изменить</a></td>
+                <td><a class="text-danger" href="{{ path('delete_branch', {id: branch.id}) }}">Удалить</a></td>
             </tr>
         {% endfor %}
     </table>
     <div>
         <br><br>
-    <button type="button" name="button" onclick="location.href='index'">На главную страницу</button>
+    <button class = "btn btn-black" type="button" name="button" onclick="location.href='index'">На главную страницу</button>
     </div>
 {% endblock %}
