--- a/templates/base.html.twig
+++ b/templates/base.html.twig
@@ -9,6 +9,15 @@
         {% block stylesheets %}{% endblock %}
     </head>
     <body>
+    {% for label, messages in app.flashes %}
+        {% for message in messages %}
+            <div class="alert alert-{{ label }}" role="alert">
+                <form>
+                {{ message }}
+                </form>
+            </div>
+        {% endfor %}
+    {% endfor %}
         {% block body %}{% endblock %}
         <script src="{{ asset('assets/js/jquery-3.4.1.min.js') }}"></script>
         <script src="{{ asset('assets/js/popper.min.js') }}"></script>
