--- a/templates/index/getData.html.twig
+++ b/templates/index/getData.html.twig
@@ -4,9 +4,7 @@
     <table class="table table-dark">
         <tr>
             <th>Номер</th>
-            <th>Фото</th>
-            <th>Имя</th>
-            <th>Фамилия</th>
+            <th>ФИО</th>
             <th>E-mail</th>
             <th>Отдел</th>
             <th>Изменить запись</th>
@@ -15,13 +13,12 @@
         {% for manager in managers %}
             <tr>
                 <td>{{ loop.index }}</td>
-                <td><img src="{{ manager.photo }}"> </td>
                 <td><a class="text-primary"
                        href="{{ path('personal_manager',{name: manager.name}) }}">
-                        {{ manager.surname }} {{ manager.name }}</a></td>
-                <td>{{ manager.surname }}</td>
+                        {{ manager.surname }} {{ manager.name }} {{ manager.middleName }}</a></td>
                 <td>{{ manager.email }}</td>
-                <td>{{ manager.branch.name }}</td>
+                <td><a class="text-primary"
+                       href="{{ path('brunch_managers',{name: manager.branch.name}) }}">{{ manager.branch.name }}</a></td>
                 <td><a class="text-warning" href="{{ path('edit_manager',{id: manager.id}) }}">Изменить</a></td>
                 <td><a class="text-danger" href="{{ path('delete_manager', {id: manager.id}) }}">Удалить</a></td>
 
