--- a/templates/index/getData.html.twig
+++ b/templates/index/getData.html.twig
@@ -1,6 +1,10 @@
 {% extends 'base.html.twig' %}
 {% block body %}
     <h1>Менеджеры</h1>
+
+    <div class="count">
+        {{ pagination.totalItemCount }}
+    </div>
     <table class="table table-dark">
         <tr>
             <th>Номер</th>
@@ -10,7 +14,8 @@
             <th>Изменить запись</th>
             <th>Удалить запись</th>
         </tr>
-        {% for manager in managers %}
+        </tr>
+        {% for manager in pagination %}
             <tr>
                 <td>{{ loop.index }}</td>
                 <td><a class="text-primary"
@@ -25,6 +30,9 @@
             </tr>
         {% endfor %}
     </table>
+    <div class="navigation">
+        {{ knp_pagination_render(pagination.) }}
+    </div>
     <h1>Отделы</h1>
     <table class="table table-dark">
         <tr>
@@ -47,4 +55,5 @@
         <button class="btn btn-black" type="button" name="button" onclick="location.href='index'">На главную страницу
         </button>
     </div>
+
 {% endblock %}
