--- a/templates/index/getData.html.twig
+++ b/templates/index/getData.html.twig
@@ -31,7 +31,7 @@
         {% endfor %}
     </table>
     <div class="navigation">
-        {{ knp_pagination_render(pagination.) }}
+        {{ knp_pagination_render(pagination) }}
     </div>
     <h1>Отделы</h1>
     <table class="table table-dark">
