--- a/templates/index/getData.html.twig
+++ b/templates/index/getData.html.twig
@@ -1,10 +1,6 @@
 {% extends 'base.html.twig' %}
 {% block body %}
     <h1>Менеджеры</h1>
-
-    <div class="count">
-        {{ pagination.totalItemCount }}
-    </div>
     <table class="table table-dark">
         <tr>
             <th>Номер</th>
@@ -31,7 +27,8 @@
         {% endfor %}
     </table>
     <div class="navigation">
-        {{ knp_pagination_render(pagination) }}
+        {{ knp_pagination_render(pagination, 'Paginator/pagination.html.twig',{}, {
+        }) }}
     </div>
     <h1>Отделы</h1>
     <table class="table table-dark">
