--- a/templates/index/writeManager.html.twig
+++ b/templates/index/writeManager.html.twig
@@ -2,6 +2,6 @@
 {% block body %}
     <h1>Добавить менеджера</h1>
     {{ form_start(manager) }}
-    {{ form_row(manager) }}
+    {{ form_widget(manager)}}
     {{ form_end(manager) }}
 {% endblock %}
