--- a/templates/index/getData.html.twig
+++ b/templates/index/getData.html.twig
@@ -7,8 +7,6 @@
             <th>ФИО</th>
             <th>E-mail</th>
             <th>Отдел</th>
-            <th>Изменить запись</th>
-            <th>Удалить запись</th>
         </tr>
         </tr>
         {% for manager in pagination %}
@@ -20,15 +18,12 @@
                 <td>{{ manager.email }}</td>
                 <td><a class="text-primary"
                        href="{{ path('brunch_managers',{name: manager.branch.name}) }}">{{ manager.branch.name }}</a></td>
-                <td><a class="text-warning" href="{{ path('edit_manager',{id: manager.id}) }}">Изменить</a></td>
-                <td><a class="text-danger" href="{{ path('delete_manager', {id: manager.id}) }}">Удалить</a></td>
 
             </tr>
         {% endfor %}
     </table>
     <div class="navigation">
-        {{ knp_pagination_render(pagination, 'Paginator/pagination.html.twig',{}, {
-        }) }}
+        {{ knp_pagination_render(pagination, 'Paginator/pagination.html.twig',{}, {}) }}
     </div>
     <h1>Отделы</h1>
     <table class="table table-dark">
