--- a/templates/index/getData.html.twig
+++ b/templates/index/getData.html.twig
@@ -9,7 +9,7 @@
             <th>Отдел</th>
         </tr>
         </tr>
-        {% for manager in pagination %}
+        {% for manager in managers %}
             <tr>
                 <td>{{ loop.index }}</td>
                 <td><a class="text-primary"
