--- a/templates/index/personalPage.html.twig
+++ b/templates/index/personalPage.html.twig
@@ -19,7 +19,8 @@
                         <th>Отдел:</th>
                     </tr>
                     <tr>
-                        <td>{{ manager.branch.name }}</td>
+{#                        <td>{{ manager.branch.name }}</td>#}
+                        <td>{{ manager.branch }}</td>
                     </tr>
                     <tr>
                         <th class="th-lg">Email:</th>
